@@ -3,7 +3,7 @@ dnl Process this file with autoconf to produce a configure script
 dnl Initialization
 AC_INIT(src/lwp.c)
 CODA_SETUP_BUILD
-AM_INIT_AUTOMAKE(lwp, 1.4)
+AM_INIT_AUTOMAKE(lwp, 1.5)
 AM_CONFIG_HEADER(config.h)
 
 dnl Checks for programs.
